--- a/package.json
+++ b/package.json
@@ -38,8 +38,13 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
+    ],
+    
+  "rules": {
+    "no-unused-vars": "off"
+  }
+},
+  
   "browserslist": {
     "production": [
       ">0.2%",
